--- a/main.css
+++ b/main.css
@@ -2,17 +2,11 @@
   margin:0;
   padding:0;
 }
-.html{
 
-}
-.body{
-
-}
 .wrapper {
 height:100vh;
 
 }
-
 .parallax1{
   background-image: url("http://res.cloudinary.com/dyag5tn5v/image/upload/v1518157937/header_-_Copy_-_Copy_-_Copy_lv6nh9.jpg");
   background-color: white;
@@ -31,6 +25,8 @@ height:100vh;
   background-size: 1350px;
 
 }
+
+/*first page*/
   .item1{
     background-color:yellow;
     color:DarkSlateGrey;
@@ -84,3 +80,58 @@ height:100vh;
     top:27%;
     left:10%;
   }
+/*second page*/
+
+@media only screen and (max-width: 400px){
+  .parallax1{
+    background-image: url("http://res.cloudinary.com/dyag5tn5v/image/upload/v1518074887/header_-_Copy_-_Copy_mq1bmy.jpg");
+    background-color: white;
+    min-height:100%;
+    background-attachment: fixed;
+    background-position:top;
+    background-repeat: no-repeat;
+    background-size:contain;}
+    .item1{
+      width:210px;
+      max-height:200px;
+      padding: 10px 10px 0 10px;
+      text-align:left;
+      font-size:70px;
+      position:relative;
+      top:335px;
+      left:10%;
+    }
+    .item2{
+
+      width:240px;
+      max-height:200px;
+      padding: 10px 10px 0 10px;
+      text-align:left;
+      font-size:70px;
+      position:relative;
+      top:350px;
+      left:10%;
+    }
+    .item3{
+      width:50px;
+      max-height:200px;
+      padding: 10px 10px 0 10px;
+      text-align:left;
+      font-size:70px;
+      position:relative;
+      top:365px;
+      left:10%;
+    }
+
+    .item4{
+      background-color: rgba(0,0,0,0);
+      width:150px;
+      height:20px;
+      text-align:left;
+      font-weight:thin;
+      align-self:end;
+      position:relative;
+      top:370px;
+      left:57%;
+    }
+}
