--- a/main.css
+++ b/main.css
@@ -134,8 +134,8 @@ height:100vh;
       text-align:left;
       font-weight:thin;
       align-self:end;
-      position:relative;
-      top:60%;
+      position:absolute;
+      top:95%;
       left:57%;
     }
 }
