--- a/main.css
+++ b/main.css
@@ -90,6 +90,7 @@ height:100vh;
     background-repeat: no-repeat;
     background-size:cover;}
     .item1{
+      background-color: rgba(255,255,0,0.6);
       width:210px;
       max-height:200px;
       padding: 10px 10px 0 10px;
@@ -99,7 +100,7 @@ height:100vh;
 
     }
     .item2{
-
+      background-color: rgba(255,255,0,0.6);
       width:240px;
       max-height:200px;
       padding: 10px 10px 0 10px;
@@ -110,6 +111,7 @@ height:100vh;
 
     }
     .item3{
+      background-color: rgba(255,255,0,0.6);
       width:50px;
       max-height:200px;
       padding: 10px 10px 0 10px;
@@ -129,6 +131,6 @@ height:100vh;
       align-self:end;
       position:absolute;
       top: 115%;
-      
+
        }
 }
