--- a/main.css
+++ b/main.css
@@ -19,14 +19,14 @@ height:100vh;
   background-position:top;
   background-repeat: no-repeat;
   background-size:cover;}
-  .parallax2 {
+.parallax2 {
   background-image: url("http://res.cloudinary.com/dyag5tn5v/image/upload/v1518173204/1__1_96_-_Copy_vomn5q.jpg");
   background-color: black;
   min-height: 100%;
-  background-attachment: fixed;
+  background-attachment: scroll;
   background-position: left;
   background-repeat: no-repeat;
-  background-size: 1350px;
+  background-size: 750px;
 
 }
 .wordstyle{
@@ -68,6 +68,53 @@ height:100vh;
     top: 115%;
     font-family: 'Josefin Sans', sans-serif;
      }
+     /* second page */
+
+     .quote{
+       height: 70vh;
+     }
+     .qline , .qline1{
+       font-size: 40px;
+       position: relative;
+       top:35%;
+       margin:0 20px 0 20px;
+       line-height:1.1em ;
+     }
+     /* page 3 */
+     .info
+     {
+       font-family: 'Josefin Sans', sans-serif;
+     }
+     .bio{
+       border-bottom: 2px solid rgba(255,255,0,0.6);
+       width:80%;
+       margin:0 auto;
+       padding:25px 25px 10px 25px;
+       font-size: 20px;
+       text-align: center;
+     }
+li{
+  border-left:10px solid rgba(255,255,0,0.3) ;
+  margin:20px 0 0 0;
+  padding:0 0 0 10px;
+  list-style-type: none;
+}
+
+.para{
+       width: 90%;
+       margin: 10px auto;
+       line-height: 1.6em;
+       letter-spacing: 0.02em;
+     }
+     .gif{
+       width:100%;
+     }
+     .img1{
+       display: none;
+       max-width:320px;
+       border-radius:100%;
+     }
+
 /* tab */
 @media only screen and (min-width: 450px) and (max-width:740px){
 
@@ -79,6 +126,11 @@ height:100vh;
   background-image: url("http://res.cloudinary.com/dyag5tn5v/image/upload/v1518157937/header_-_Copy_-_Copy_-_Copy_lv6nh9.jpg");
   background-position:right;
   background-size:193vh;}
+  .parallax2 {
+    background-attachment: scroll;
+    background-size: 1100px;
+
+  }
 .item1{
     position:relative;
 
@@ -102,6 +154,13 @@ height:100vh;
     position:absolute;
     top:-10%;
      }
+     .quote{
+       height: 100vh;
+     }
+     .qline , .qline1{
+       top:40%;
+       line-height: 1.4em;
+     }
 }
 /* ipad */
 @media only screen and (min-width:741px) and (max-width: 800px){
@@ -110,7 +169,9 @@ height:100vh;
     background-image: url("http://res.cloudinary.com/dyag5tn5v/image/upload/v1518074316/header_cg6vq5.jpg");
     background-position:bottom;
     background-size:75vh;}
-
+    .parallax2 {
+      background-size: 1650px;
+    }
 }
 
 /* desktop */
@@ -125,6 +186,11 @@ height:100vh;
     background-image: url("http://res.cloudinary.com/dyag5tn5v/image/upload/v1518157937/header_-_Copy_-_Copy_-_Copy_lv6nh9.jpg");
     min-height:100%;
     background-attachment: fixed;}
+    .parallax2 {
+      background-attachment: fixed;
+      background-position: left;
+      background-size: 1350px;
+    }
     .wordstyle{
       background-color:yellow;
         font-size:130px;
@@ -150,5 +216,18 @@ height:100vh;
       height:33px;
       position:relative;
       top:70px;
+    }
+    /* second page */
+    .quote{
+      height: 100vh;
+    }
+    .qline , .qline1{
+      background-color: rgba(255, 255, 0, 0.9);
+      font-size: 60px;
+      line-height: 70px;
+      position: relative;
+      top:40%;
+      margin:0 40px 0 40px;
+      text-align: center;
     }
 }
