--- a/main.css
+++ b/main.css
@@ -29,6 +29,20 @@ height:100vh;
   background-size: 855px;
 
 }
+/* scroll bar */
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    background: whitesmoke;
+}
+::-webkit-scrollbar-thumb {
+    background: rgba(255,255,0,0.4);
+    border-radius:20px;
+}
+::-webkit-scrollbar-thumb:hover {
+    background: yellow;
+}
 .wordstyle{
     background-color: rgba(255,255,0,0.8);
       color:DarkSlateGrey;
@@ -91,12 +105,13 @@ height:100vh;
        width:80%;
        margin:0 auto;
        padding:25px 25px 10px 25px;
-       font-size: 20px;
+       font-size: 30px;
        text-align: center;
      }
+
 li{
 
-  border-left:10px solid rgba(255,255,0,0.3) ;
+  border-left:10px solid rgba(0,0,255,0.3) ;
   margin:20px 0 0 0;
   padding:0 0 0 10px;
   list-style-type: none;
@@ -118,28 +133,79 @@ li{
   text-align: center;
 }
 .awardlist{
-margin:0 auto 0 auto;
-max-width:600px;
+  margin:0 auto 0 auto;
+  max-width:600px;
   height:auto;
+
 }
 .awarditem{
 
-  box-shadow: 3px 3px 10px grey;
+  box-shadow: 1px 1px 1px grey;
   margin:20px;
   padding:5px 0 5px 10px;
-  border-left:10px solid rgba(255,255,0,0.3);
+  border-left:10px solid rgba(0,0,255,0.3);
   line-height: 1.6em;
   letter-spacing: 0.02em;
 }
 .imgaward{
   width:300px;
-  height:600px;
+  height:330px;
   margin: 0 auto;
 }
 img{
 
   width:300px;
   border-radius:5px;
+}
+/* movie list  */
+.movietable{
+margin: auto;
+max-width:600px;
+}
+.searchbox{
+  margin:10px 0;
+  min-width:90%;
+  padding:10px;
+  border:2px solid whitesmoke;
+  border-radius:2px;
+}
+.tabbb {
+  box-shadow: 1px 1px 6px grey;
+  overflow:scroll;
+  overflow-x: hidden;
+  height:80vh;
+}
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+th{
+    padding: 12px;
+    text-align: left;
+    border-bottom: 3px solid whitesmoke;
+
+}
+td {
+    padding: 12px;
+    text-align: left;
+    border-bottom: 1px solid whitesmoke;
+    line-height: 1.7em;
+    letter-spacing: 0.02em;
+}
+a{
+  text-decoration:underline;
+}
+a:link{
+  color: black;
+}
+a:visited{
+  color:black;
+}
+a:hover{
+  text-decoration:none;
+  color:black;
+  background-color: yellow;
+
 }
 
 /* tab */
@@ -268,4 +334,5 @@ img{
     .para{
         max-width:60%;
          }
+
 }
